--- a/category.html
+++ b/category.html
@@ -41,7 +41,7 @@
     <div class="cards">
       <article class="card">
         <a href="./post.html">
-          <img src="./img/photo_5.png" alt="Профиль Анна, фотограф" loading="lazy">
+          <img src="./img/photo_1.jpg" alt="Профиль Анна, фотограф" loading="lazy">
           <div class="body">
             <h3>Анна</h3>
             <div class="meta"><span class="badge">Майами-Бич</span><span class="badge">Фотограф</span><span class="when">08.08.2025, 11:43</span></div>
@@ -50,7 +50,7 @@
       </article>
       <article class="card">
         <a href="./post.html">
-          <img src="./img/photo_6.png" alt="Профиль Олексій, фотограф" loading="lazy">
+          <img src="./img/photo_2.jpg" alt="Профиль Олексій, фотограф" loading="lazy">
           <div class="body">
             <h3>Олексій</h3>
             <div class="meta"><span class="badge">Санні-Айлс</span><span class="badge">Фотограф</span><span class="when">09.08.2025, 09:10</span></div>
@@ -59,7 +59,7 @@
       </article>
       <article class="card">
         <a href="./post.html">
-          <img src="./img/photo_7.png" alt="Профиль Даниил, фотограф" loading="lazy">
+          <img src="./img/photo_6.jpg" alt="Профиль Даниил, фотограф" loading="lazy">
           <div class="body">
             <h3>Даниил</h3>
             <div class="meta"><span class="badge">Даунтаун Майами</span><span class="badge">Фотограф</span><span class="when">10.08.2025, 15:30</span></div>
