--- a/post.html
+++ b/post.html
@@ -29,10 +29,10 @@
   <section class="section post" aria-label="Профиль">
     <div>
       <div class="gallery">
-        <img src="./img/gallery_1.png" alt="Фотографии Анны — образец 1" loading="lazy">
-        <img src="./img/gallery_2.png" alt="Фотографии Анны — образец 2" loading="lazy">
-        <img src="./img/gallery_3.png" alt="Фотографии Анны — образец 3" loading="lazy">
-        <img src="./img/gallery_4.png" alt="Фотографии Анны — образец 4" loading="lazy">
+        <img class="gallery-photo" src="./img/photo_1.jpg" alt="Фотографии Анны — образец 1" loading="lazy">
+        <img class="gallery-photo" src="./img/photo_1.jpg" alt="Фотографии Анны — образец 2" loading="lazy">
+        <img class="gallery-photo" src="./img/photo_1.jpg" alt="Фотографии Анны — образец 3" loading="lazy">
+        <img class="gallery-photo" src="./img/photo_1.jpg" alt="Фотографии Анны — образец 4" loading="lazy">
       </div>
     </div>
 
