--- a/region.html
+++ b/region.html
@@ -41,7 +41,7 @@
     <div class="cards">
       <article class="card">
         <a href="./post.html">
-          <img src="./img/photo_2.png" alt="Профиль Ева, Модель в Халландейле" loading="lazy">
+          <img src="./img/photo_1.jpg" alt="Профиль Ева, Модель в Халландейле" loading="lazy">
           <div class="body">
             <h3>Ева</h3>
             <div class="meta"><span class="badge">Халландейл-Бич</span><span class="badge">Модель</span><span class="when">09.08.2025, 12:05</span></div>
@@ -50,7 +50,7 @@
       </article>
       <article class="card">
         <a href="./post.html">
-          <img src="./img/photo_3.png" alt="Профиль Данііл, Фотограф в Халландейле" loading="lazy">
+          <img src="./img/photo_4.jpg" alt="Профиль Данііл, Фотограф в Халландейле" loading="lazy">
           <div class="body">
             <h3>Даниил</h3>
             <div class="meta"><span class="badge">Халландейл-Бич</span><span class="badge">Фотограф</span><span class="when">09.08.2025, 14:22</span></div>
@@ -59,7 +59,7 @@
       </article>
       <article class="card">
         <a href="./post.html">
-          <img src="./img/photo_4.png" alt="Профиль Полина, Стилист в Халландейле" loading="lazy">
+          <img src="./img/photo_3.jpg" alt="Профиль Полина, Стилист в Халландейле" loading="lazy">
           <div class="body">
             <h3>Полина</h3>
             <div class="meta"><span class="badge">Халландейл-Бич</span><span class="badge">Стилист</span><span class="when">08.08.2025, 18:40</span></div>
