--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       
 <article class="card">
   <a href="./post.html">
-    <img src="./img/photo_1.png" alt="Профиль Анна, Фотограф в Майамі-Біч" loading="lazy">
+    <img src="./img/photo_1.jpg" alt="Профиль Анна, Фотограф в Майамі-Біч" loading="lazy">
     <div class="body">
       <h3>Анна</h3>
       <div class="meta"><span class="badge">Майамі-Біч</span><span class="badge">Фотограф</span><span class="when">08.08.2025, 10:00</span></div>
@@ -38,7 +38,7 @@
 
 <article class="card">
   <a href="./post.html">
-    <img src="./img/photo_2.png" alt="Профиль Марк, Модель в Халландейл-Біч" loading="lazy">
+    <img src="./img/photo_2.jpg" alt="Профиль Марк, Модель в Халландейл-Біч" loading="lazy">
     <div class="body">
       <h3>Марк</h3>
       <div class="meta"><span class="badge">Халландейл-Біч</span><span class="badge">Модель</span><span class="when">09.08.2025, 11:13</span></div>
@@ -48,7 +48,7 @@
 
 <article class="card">
   <a href="./post.html">
-    <img src="./img/photo_3.png" alt="Профиль Ева, Стилист в Санні-Айлс" loading="lazy">
+    <img src="./img/photo_3.jpg" alt="Профиль Ева, Стилист в Санні-Айлс" loading="lazy">
     <div class="body">
       <h3>Ева</h3>
       <div class="meta"><span class="badge">Санні-Айлс</span><span class="badge">Стилист</span><span class="when">10.08.2025, 12:26</span></div>
@@ -58,7 +58,7 @@
 
 <article class="card">
   <a href="./post.html">
-    <img src="./img/photo_4.png" alt="Профиль Даниил, Візажист в Даунтаун Майамі" loading="lazy">
+    <img src="./img/photo_4.jpg" alt="Профиль Даниил, Візажист в Даунтаун Майамі" loading="lazy">
     <div class="body">
       <h3>Даниил</h3>
       <div class="meta"><span class="badge">Даунтаун Майамі</span><span class="badge">Візажист</span><span class="when">08.08.2025, 13:39</span></div>
@@ -68,7 +68,7 @@
 
 <article class="card">
   <a href="./post.html">
-    <img src="./img/photo_5.png" alt="Профиль Софія, Фотограф в Майамі-Біч" loading="lazy">
+    <img src="./img/photo_1.jpg" alt="Профиль Софія, Фотограф в Майамі-Біч" loading="lazy">
     <div class="body">
       <h3>Софія</h3>
       <div class="meta"><span class="badge">Майамі-Біч</span><span class="badge">Фотограф</span><span class="when">09.08.2025, 14:52</span></div>
@@ -78,7 +78,7 @@
 
 <article class="card">
   <a href="./post.html">
-    <img src="./img/photo_6.png" alt="Профиль Олексій, Модель в Халландейл-Біч" loading="lazy">
+    <img src="./img/photo_6.jpg" alt="Профиль Олексій, Модель в Халландейл-Біч" loading="lazy">
     <div class="body">
       <h3>Олексій</h3>
       <div class="meta"><span class="badge">Халландейл-Біч</span><span class="badge">Модель</span><span class="when">10.08.2025, 15:05</span></div>
@@ -88,7 +88,7 @@
 
 <article class="card">
   <a href="./post.html">
-    <img src="./img/photo_7.png" alt="Профиль Полина, Стилист в Санні-Айлс" loading="lazy">
+    <img src="./img/photo_3.jpg" alt="Профиль Полина, Стилист в Санні-Айлс" loading="lazy">
     <div class="body">
       <h3>Полина</h3>
       <div class="meta"><span class="badge">Санні-Айлс</span><span class="badge">Стилист</span><span class="when">08.08.2025, 10:18</span></div>
@@ -98,7 +98,7 @@
 
 <article class="card">
   <a href="./post.html">
-    <img src="./img/photo_8.png" alt="Профиль Наталі, Візажист в Даунтаун Майамі" loading="lazy">
+    <img src="./img/photo_1.jpg" alt="Профиль Наталі, Візажист в Даунтаун Майамі" loading="lazy">
     <div class="body">
       <h3>Наталі</h3>
       <div class="meta"><span class="badge">Даунтаун Майамі</span><span class="badge">Візажист</span><span class="when">09.08.2025, 11:31</span></div>
@@ -108,7 +108,7 @@
 
 <article class="card">
   <a href="./post.html">
-    <img src="./img/photo_9.png" alt="Профиль Влад, Фотограф в Майамі-Біч" loading="lazy">
+    <img src="./img/photo_6.jpg" alt="Профиль Влад, Фотограф в Майамі-Біч" loading="lazy">
     <div class="body">
       <h3>Влад</h3>
       <div class="meta"><span class="badge">Майамі-Біч</span><span class="badge">Фотограф</span><span class="when">10.08.2025, 12:44</span></div>
@@ -118,7 +118,7 @@
 
 <article class="card">
   <a href="./post.html">
-    <img src="./img/photo_10.png" alt="Профиль Ірина, Модель в Халландейл-Біч" loading="lazy">
+    <img src="./img/photo_3.jpg" alt="Профиль Ірина, Модель в Халландейл-Біч" loading="lazy">
     <div class="body">
       <h3>Ірина</h3>
       <div class="meta"><span class="badge">Халландейл-Біч</span><span class="badge">Модель</span><span class="when">08.08.2025, 13:57</span></div>
@@ -128,7 +128,7 @@
 
 <article class="card">
   <a href="./post.html">
-    <img src="./img/photo_11.png" alt="Профиль Катерина, Стилист в Санні-Айлс" loading="lazy">
+    <img src="./img/photo_1.jpg" alt="Профиль Катерина, Стилист в Санні-Айлс" loading="lazy">
     <div class="body">
       <h3>Катерина</h3>
       <div class="meta"><span class="badge">Санні-Айлс</span><span class="badge">Стилист</span><span class="when">09.08.2025, 14:10</span></div>
@@ -138,7 +138,7 @@
 
 <article class="card">
   <a href="./post.html">
-    <img src="./img/photo_12.png" alt="Профиль Ганна, Візажист в Даунтаун Майамі" loading="lazy">
+    <img src="./img/photo_3.jpg" alt="Профиль Ганна, Візажист в Даунтаун Майамі" loading="lazy">
     <div class="body">
       <h3>Ганна</h3>
       <div class="meta"><span class="badge">Даунтаун Майамі</span><span class="badge">Візажист</span><span class="when">10.08.2025, 15:23</span></div>
@@ -148,7 +148,7 @@
 
 <article class="card">
   <a href="./post.html">
-    <img src="./img/photo_1.png" alt="Профиль Тоні, Фотограф в Майамі-Біч" loading="lazy">
+    <img src="./img/photo_2.jpg" alt="Профиль Тоні, Фотограф в Майамі-Біч" loading="lazy">
     <div class="body">
       <h3>Тоні</h3>
       <div class="meta"><span class="badge">Майамі-Біч</span><span class="badge">Фотограф</span><span class="when">08.08.2025, 10:36</span></div>
@@ -158,7 +158,7 @@
 
 <article class="card">
   <a href="./post.html">
-    <img src="./img/photo_2.png" alt="Профиль Леся, Модель в Халландейл-Біч" loading="lazy">
+    <img src="./img/photo_1.jpg" alt="Профиль Леся, Модель в Халландейл-Біч" loading="lazy">
     <div class="body">
       <h3>Леся</h3>
       <div class="meta"><span class="badge">Халландейл-Біч</span><span class="badge">Модель</span><span class="when">09.08.2025, 11:49</span></div>
@@ -168,7 +168,7 @@
 
 <article class="card">
   <a href="./post.html">
-    <img src="./img/photo_3.png" alt="Профиль Вероніка, Стилист в Санні-Айлс" loading="lazy">
+    <img src="./img/photo_3.jpg" alt="Профиль Вероніка, Стилист в Санні-Айлс" loading="lazy">
     <div class="body">
       <h3>Вероніка</h3>
       <div class="meta"><span class="badge">Санні-Айлс</span><span class="badge">Стилист</span><span class="when">10.08.2025, 12:02</span></div>
@@ -178,7 +178,7 @@
 
 <article class="card">
   <a href="./post.html">
-    <img src="./img/photo_4.png" alt="Профиль Майкл, Візажист в Даунтаун Майамі" loading="lazy">
+    <img src="./img/photo_6.jpg" alt="Профиль Майкл, Візажист в Даунтаун Майамі" loading="lazy">
     <div class="body">
       <h3>Майкл</h3>
       <div class="meta"><span class="badge">Даунтаун Майамі</span><span class="badge">Візажист</span><span class="when">08.08.2025, 13:15</span></div>
@@ -188,7 +188,7 @@
 
 <article class="card">
   <a href="./post.html">
-    <img src="./img/photo_5.png" alt="Профиль Ілля, Фотограф в Майамі-Біч" loading="lazy">
+    <img src="./img/photo_4.jpg" alt="Профиль Ілля, Фотограф в Майамі-Біч" loading="lazy">
     <div class="body">
       <h3>Ілля</h3>
       <div class="meta"><span class="badge">Майамі-Біч</span><span class="badge">Фотограф</span><span class="when">09.08.2025, 14:28</span></div>
@@ -198,7 +198,7 @@
 
 <article class="card">
   <a href="./post.html">
-    <img src="./img/photo_6.png" alt="Профиль Олена, Модель в Халландейл-Біч" loading="lazy">
+    <img src="./img/photo_3.jpg" alt="Профиль Олена, Модель в Халландейл-Біч" loading="lazy">
     <div class="body">
       <h3>Олена</h3>
       <div class="meta"><span class="badge">Халландейл-Біч</span><span class="badge">Модель</span><span class="when">10.08.2025, 15:41</span></div>
@@ -208,7 +208,7 @@
 
 <article class="card">
   <a href="./post.html">
-    <img src="./img/photo_7.png" alt="Профиль Артем, Стилист в Санні-Айлс" loading="lazy">
+    <img src="./img/photo_2.jpg" alt="Профиль Артем, Стилист в Санні-Айлс" loading="lazy">
     <div class="body">
       <h3>Артем</h3>
       <div class="meta"><span class="badge">Санні-Айлс</span><span class="badge">Стилист</span><span class="when">08.08.2025, 10:54</span></div>
@@ -218,7 +218,7 @@
 
 <article class="card">
   <a href="./post.html">
-    <img src="./img/photo_8.png" alt="Профиль Юлія, Візажист в Даунтаун Майамі" loading="lazy">
+    <img src="./img/photo_1.jpg" alt="Профиль Юлія, Візажист в Даунтаун Майамі" loading="lazy">
     <div class="body">
       <h3>Юлія</h3>
       <div class="meta"><span class="badge">Даунтаун Майамі</span><span class="badge">Візажист</span><span class="when">09.08.2025, 11:07</span></div>
@@ -228,7 +228,7 @@
 
 <article class="card">
   <a href="./post.html">
-    <img src="./img/photo_9.png" alt="Профиль Стан, Фотограф в Майамі-Біч" loading="lazy">
+    <img src="./img/photo_6.jpg" alt="Профиль Стан, Фотограф в Майамі-Біч" loading="lazy">
     <div class="body">
       <h3>Стан</h3>
       <div class="meta"><span class="badge">Майамі-Біч</span><span class="badge">Фотограф</span><span class="when">10.08.2025, 12:20</span></div>
@@ -238,7 +238,7 @@
 
 <article class="card">
   <a href="./post.html">
-    <img src="./img/photo_10.png" alt="Профиль Олександра, Модель в Халландейл-Біч" loading="lazy">
+    <img src="./img/photo_3.jpg" alt="Профиль Олександра, Модель в Халландейл-Біч" loading="lazy">
     <div class="body">
       <h3>Олександра</h3>
       <div class="meta"><span class="badge">Халландейл-Біч</span><span class="badge">Модель</span><span class="when">08.08.2025, 13:33</span></div>
@@ -248,7 +248,7 @@
 
 <article class="card">
   <a href="./post.html">
-    <img src="./img/photo_11.png" alt="Профиль Рита, Стилист в Санні-Айлс" loading="lazy">
+    <img src="./img/photo_1.jpg" alt="Профиль Рита, Стилист в Санні-Айлс" loading="lazy">
     <div class="body">
       <h3>Рита</h3>
       <div class="meta"><span class="badge">Санні-Айлс</span><span class="badge">Стилист</span><span class="when">09.08.2025, 14:46</span></div>
@@ -258,7 +258,7 @@
 
 <article class="card">
   <a href="./post.html">
-    <img src="./img/photo_12.png" alt="Профиль Григорій, Візажист в Даунтаун Майамі" loading="lazy">
+    <img src="./img/photo_4.jpg" alt="Профиль Григорій, Візажист в Даунтаун Майамі" loading="lazy">
     <div class="body">
       <h3>Григорій</h3>
       <div class="meta"><span class="badge">Даунтаун Майамі</span><span class="badge">Візажист</span><span class="when">10.08.2025, 15:59</span></div>
