--- a/post.html
+++ b/post.html
@@ -14,7 +14,7 @@
     </a>
     <nav class="primary" aria-label="Основная навигация">
       <a href="./region.html">Регионы</a>
-      <a href="./category.html">Рубрики</a>
+      <a href="./category.html">Категории</a>
     </nav>
   </div>
 </header>
