--- a/post.html
+++ b/post.html
@@ -1,70 +1,79 @@
 <!DOCTYPE html>
 <html lang="ru">
+
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Анна — фотограф</title>
   <link rel="stylesheet" href="./css/style.css">
 </head>
+
 <body>
-<header>
-  <div class="container header-inner">
-    <a class="logo" href="./index.html">
-      <img src="./img/logo.png" alt="ModelConnect Miami" loading="lazy"><span>ModelConnect Miami</span>
-    </a>
-    <nav class="primary" aria-label="Основная навигация">
-      <a href="./region.html">Регионы</a>
-      <a href="./category.html">Категории</a>
-    </nav>
-  </div>
-</header>
-
-<main class="container">
-  <nav class="breadcrumb" aria-label="Хлебные крошки">
-    <a href="./index.html">Главная</a> → <a href="./category.html">Фотографы</a> → <span>Анна</span>
-  </nav>
-
-  <h1>Анна — фотограф</h1>
-
-  <section class="section post" aria-label="Профиль">
-    <div>
-      <div class="gallery">
-        <img class="gallery-photo" src="./img/photo_1.jpg" alt="Фотографии Анны — образец 1" loading="lazy">
-        <img class="gallery-photo" src="./img/photo_1.jpg" alt="Фотографии Анны — образец 2" loading="lazy">
-        <img class="gallery-photo" src="./img/photo_1.jpg" alt="Фотографии Анны — образец 3" loading="lazy">
-        <img class="gallery-photo" src="./img/photo_1.jpg" alt="Фотографии Анны — образец 4" loading="lazy">
-      </div>
+  <header>
+    <div class="container header-inner">
+      <a class="logo" href="./index.html">
+        <img src="./img/logo.png" alt="ModelConnect Miami" loading="lazy"><span>ModelConnect Miami</span>
+      </a>
+      <nav class="primary" aria-label="Основная навигация">
+        <a href="./region.html">Регионы</a>
+        <a href="./category.html">Категории</a>
+      </nav>
     </div>
+  </header>
 
-    <aside>
-      <div class="profile">
-        <h2>О профиле</h2>
-        <dl>
-          <dt>Имя</dt><dd>Анна</dd>
-          <dt>Возраст</dt><dd>25</dd>
-          <dt>Город</dt><dd>Майами-Бич</dd>
-          <dt>Рубрика</dt><dd>Фотограф</dd>
-          <dt>Опубликовано</dt><dd>08.08.2025, 11:43</dd>
-        </dl>
+  <main class="container">
+    <nav class="breadcrumb" aria-label="Хлебные крошки">
+      <a href="./index.html">Главная</a> → <a href="./category.html">Фотографы</a> → <span>Анна</span>
+    </nav>
 
-        <div class="contact">
-          <h3>Контакты</h3>
-          <a class="btn" href="mailto:anna@example.com">Связаться по email</a>
-          <a class="btn" href="tel:+17865550123">Позвонить</a>
+    <h1>Анна — фотограф</h1>
+
+    <section class="section post" aria-label="Профиль">
+      <div>
+        <div class="gallery">
+          <img class="gallery-photo" src="./img/photo_1.jpg" alt="Фотографии Анны — образец 1" loading="lazy">
+          <img class="gallery-photo" src="./img/photo_1.jpg" alt="Фотографии Анны — образец 2" loading="lazy">
+          <img class="gallery-photo" src="./img/photo_1.jpg" alt="Фотографии Анны — образец 3" loading="lazy">
+          <img class="gallery-photo" src="./img/photo_1.jpg" alt="Фотографии Анны — образец 4" loading="lazy">
         </div>
       </div>
 
-      <div class="panel" style="margin-top:16px">
-        <h2>Описание</h2>
-        <p>Коммерческий и портретный фотограф. Работаю по Майами и ближайшим городам. Снимаю каталоги, fashion‑съёмку, lifestyle и мероприятия.
-        Доступна для коллабораций с моделями, стилистами и визажистами.</p>
-      </div>
-    </aside>
-  </section>
-</main>
+      <aside>
+        <div class="profile">
+          <h2>О профиле</h2>
+          <dl>
+            <dt>Имя</dt>
+            <dd>Анна</dd>
+            <dt>Возраст</dt>
+            <dd>25</dd>
+            <dt>Город</dt>
+            <dd>Майами-Бич</dd>
+            <dt>Рубрика</dt>
+            <dd>Фотограф</dd>
+            <dt>Опубликовано</dt>
+            <dd>08.08.2025, 11:43</dd>
+          </dl>
 
-<footer>
-  <div class="container">© 2025 ModelConnect Miami</div>
-</footer>
+          <div class="contact">
+            <h3>Контакты</h3>
+            <a class="btn" href="mailto:anna@example.com">Связаться по email</a>
+            <a class="btn" href="tel:+17865550123">Позвонить</a>
+          </div>
+        </div>
+
+        <div class="panel" style="margin-top:16px">
+          <h2>Описание</h2>
+          <p>Коммерческий и портретный фотограф. Работаю по Майами и ближайшим городам. Снимаю каталоги, fashion‑съёмку,
+            lifestyle и мероприятия.
+            Доступна для коллабораций с моделями, стилистами и визажистами.</p>
+        </div>
+      </aside>
+    </section>
+  </main>
+
+  <footer>
+    <div class="container">© 2025 ModelConnect Miami</div>
+  </footer>
 </body>
+
 </html>
